# bitwig-theme-manager

./: .gitignore  CHECKLIST.md  DESIGN.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
community-themes/: index.json  themechathistory.txt
community-themes/themes/: absynth-fun.json  april-2025.json  bitwig-live.json  blackfire.bte  blackwig.json  chimi-greenish.json  dark-blue.json  dark-greenwig.json  dark-one.json  dark-red.json  darkest-greenwig.json  darkfault.json  darkred-2025.json  december-2024.json  desolate.json  dsnvs-dark-v2.bte  dsnvs-dark.bte  dsnvs-light-v2.bte  dsnvs-light.bte  dsnvs.json  greenon-blue-automation.json  greenon-pink-automation.json  greenwig-chimi.json  greenwig-plus.json  grey-cloud.json  halloween.json  infosphere.bte  lo-ki.json  logwig.json  minimal-audio.json  ocean-blue.json  ocean-teal.json  orangeon-automation.json  overcast.json  oxide.json  psx.json  purpla-shape.json  purple-wig-green-sliders.bte  redblack-work.json  retronia.json  (+14 more)
scripts/: release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/bitwig/: detector.rs  mod.rs  patcher.rs
src-tauri/src/repository/: bundled.rs  cache.rs  fetcher.rs  mod.rs
src-tauri/src/theme/: mod.rs  parser.rs  watcher.rs
src/api/: bitwig.ts  types.ts
src/components/: ColorPicker.tsx  LoadingSpinner.tsx  UpdateNotification.tsx
src/hooks/: useBitwig.ts  useRepository.ts  useSettings.ts  useThemes.ts  useUpdater.ts  useWatcher.ts
