[package]
name = "bitwig-theme-manager"
version = "0.1.0"
description = "Bitwig Theme Manager - A cross-platform theme manager for Bitwig Studio"
authors = ["you"]
edition = "2021"

[lib]
name = "bitwig_theme_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
walkdir = "2"
regex = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
notify = "8"
tokio = { version = "1", features = ["fs", "sync"] }

[dev-dependencies]
tempfile = "3"
