[package]
name = "bitwig-theme-manager"
version = "0.2.9"
description = "Bitwig Theme Manager - A cross-platform theme manager for Bitwig Studio"
authors = ["you"]
edition = "2021"
default-run = "bitwig-theme-manager"

[lib]
name = "bitwig_theme_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
walkdir = "2"
regex = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
notify = "8"
tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
zip = "2"

[dev-dependencies]
tempfile = "3"
